versioned_docs/version-5.3/document-extensions/revisions/client-api/operations/configure-revisions.mdx
---
title: "Configure Revisions Operation"
hide_table_of_contents: true
sidebar_label: Configure Revisions
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Configure Revisions Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Use `ConfigureRevisionsOperation` to apply the following [revisions configuration](../../../../studio/database/settings/document-revisions.mdx#revisions-configuration) to the database:  
  * **Default configuration** - applies to all document collections.  
  * **Collection-specific configurations** - override the default settings for these collections.  
  * To apply a configuration for conflict document revisions see [configure conflict revisions](../../../../document-extensions/revisions/client-api/operations/conflict-revisions-configuration.mdx).  

* The configuration passed to this operation will **REPLACE** the current revisions configuration in the database.  
  To **MODIFY** existing configuration, fetch the current configuration from the database record first.  

* After applying the configuration,  
  revisions are created and purged for a document whenever the document is created, modified, or deleted.  

* To create a revision when there is no configuration defined (or enabled) see: [force revision creation](../../../../document-extensions/revisions/overview.mdx#force-revision-creation)

* By default, the operation will be applied to the [default database](../../../../client-api/setting-up-default-database.mdx).  
  To operate on a different database see [switch operations to different database](../../../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx).  

* In this page:  
  * [Replace configuration](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#replace-configuration)  
  * [Modify configuration](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#modify-configuration)  
  * [Syntax](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#syntax)  

</Admonition>
## Replace configuration

* In this example, we create a new `RevisionsConfiguration` for the database.  
  If revisions configuration already exists in the database - it will be **replaced**.

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// ==============================================================================
// Define default settings that will apply to ALL collections
// Note: this is optional
var defaultRevConfig = new RevisionsCollectionConfiguration()
{
    MinimumRevisionsToKeep = 100,
    MinimumRevisionAgeToKeep = new TimeSpan(days: 7, 0, 0, 0),
    MaximumRevisionsToDeleteUponDocumentUpdate = 15,
    PurgeOnDelete = false,
    Disabled = false
    
    // With this configuration:
    // ------------------------
    // * A revision will be created anytime a document is modified or deleted.
    // * Revisions of a deleted document can be accessed in the Revisions Bin view.
    // * Only the latest 100 revisions will be kept. Older ones will be discarded.
    // * Older revisions will be removed if they exceed 7 days on next revision creation.
    // * A maximum of 15 revisions will be deleted each time a document is updated,
    //   until the defined '# of revisions to keep' limit is reached.
};

// ==============================================================================
// Define a specific configuration for the EMPLOYEES collection
// This will override the default settings 
var employeesRevConfig = new RevisionsCollectionConfiguration()
{
    MinimumRevisionsToKeep = 50,
    MinimumRevisionAgeToKeep = new TimeSpan(hours: 12, minutes: 0, seconds: 0),
    PurgeOnDelete = true,
    Disabled = false
    
    // With this configuration:
    // ------------------------
    // * A revision will be created anytime an Employee document is modified.
    // * When a document is deleted all its revisions will be removed.
    // * At least 50 of the latest revisions will be kept.
    // * Older revisions will be removed if they exceed 12 hours on next revision creation.
};

// ==============================================================================
// Define a specific configuration for the PRODUCTS collection
// This will override the default settings 
var productsRevConfig = new RevisionsCollectionConfiguration()
{
    Disabled = true 
    // No revisions will be created for the Products collection,
    // even though default configuration is enabled
};

// ==============================================================================
// Combine all configurations in the RevisionsConfiguration object
var revisionsConfig = new RevisionsConfiguration()
{
    Default = defaultRevConfig,
    Collections = new Dictionary<string, RevisionsCollectionConfiguration>()
    {
        { "Employees", employeesRevConfig },
        { "Products", productsRevConfig }
    }
};

// ==============================================================================
// Define the configure revisions operation, pass the configuration
var configureRevisionsOp = new ConfigureRevisionsOperation(revisionsConfig);

// Execute the operation by passing it to Maintenance.Send
// Any existing configuration will be replaced with the new configuration passed
documentStore.Maintenance.Send(configureRevisionsOp);
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// ==============================================================================
// Define default settings that will apply to ALL collections
// Note: this is optional
var defaultRevConfig = new RevisionsCollectionConfiguration()
{
    MinimumRevisionsToKeep = 100,
    MinimumRevisionAgeToKeep = new TimeSpan(days: 7, 0, 0, 0),
    MaximumRevisionsToDeleteUponDocumentUpdate = 15,
    PurgeOnDelete = false,
    Disabled = false,
    
    // With this configuration:
    // ------------------------
    // * A revision will be created anytime a document is modified or deleted.
    // * Revisions of a deleted document can be accessed in the Revisions Bin view.
    // * Only the latest 100 revisions will be kept. Older ones will be discarded.
    // * Older revisions will be removed if they exceed 7 days on next revision creation.
    // * A maximum of 15 revisions will be deleted each time a document is updated,
    //   until the defined '# of revisions to keep' limit is reached.
};

// ==============================================================================
// Define a specific configuration for the EMPLOYEES collection
// This will override the default settings 
var employeesRevConfig = new RevisionsCollectionConfiguration()
{
    MinimumRevisionsToKeep = 50,
    MinimumRevisionAgeToKeep = new TimeSpan(hours: 12, minutes: 0, seconds: 0),
    PurgeOnDelete = true,
    Disabled = false
   
    // With this configuration:
    // ------------------------
    // * A revision will be created anytime an Employee document is modified.
    // * When a document is deleted all its revisions will be removed.
    // * At least 50 of the latest revisions will be kept.
    // * Older revisions will be removed if they exceed 12 hours on next revision creation.
};
    
// ==============================================================================
// Define a specific configuration for the PRODUCTS collection
// This will override the default settings 
var productsRevConfig = new RevisionsCollectionConfiguration()
{
    Disabled = true 
    // No revisions will be created for the Products collection,
    // even though default configuration is enabled
};

// ==============================================================================
// Combine all configurations in the RevisionsConfiguration object
var revisionsConfig = new RevisionsConfiguration()
{
    Default = defaultRevConfig,
    Collections = new Dictionary<string, RevisionsCollectionConfiguration>()
    {
        { "Employees", employeesRevConfig },
        { "Products", productsRevConfig }
    }
};

// ==============================================================================
// Define the configure revisions operation, pass the configuration
var configureRevisionsOp = new ConfigureRevisionsOperation(revisionsConfig);
               
// Execute the operation by passing it to Maintenance.SendAsync
// Any existing configuration will be replaced with the new configuration passed
await documentStore.Maintenance.SendAsync(configureRevisionsOp);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Modify configuration

* In this example, we fetch the existing revisions configuration from the database record and **modify** it.   

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// ==============================================================================
// Define the get database record operation:
var getDatabaseRecordOp = new GetDatabaseRecordOperation(documentStore.Database);
// Get the current revisions configuration from the database record:
RevisionsConfiguration revisionsConfig =
    documentStore.Maintenance.Server.Send(getDatabaseRecordOp).Revisions;

// ==============================================================================
// If no revisions configuration exists, then create a new configuration
if (revisionsConfig == null)
{
    revisionsConfig = new RevisionsConfiguration()
    {
        Default = defaultRevConfig,
        Collections = new Dictionary<string, RevisionsCollectionConfiguration>()
        {
            { "Employees", employeesRevConfig },
            { "Products", productsRevConfig }
        }
    };
}

// ==============================================================================
// If a revisions configuration already exists, then modify it
else
{
    revisionsConfig.Default = defaultRevConfig;
    revisionsConfig.Collections["Employees"] = employeesRevConfig;
    revisionsConfig.Collections["Products"] = productsRevConfig;
}

// ==============================================================================
// Define the configure revisions operation, pass the configuration
var configureRevisionsOp = new ConfigureRevisionsOperation(revisionsConfig);

// Execute the operation by passing it to Maintenance.Send
// The existing configuration will be updated
documentStore.Maintenance.Send(configureRevisionsOp);
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// ==============================================================================
// Define the get database record operation:
var getDatabaseRecordOp = new GetDatabaseRecordOperation(documentStore.Database);
// Get the current revisions configuration from the database record:
RevisionsConfiguration revisionsConfig =
    documentStore.Maintenance.Server.Send(getDatabaseRecordOp).Revisions;

// ==============================================================================
// If no revisions configuration exists, then create a new configuration
if (revisionsConfig == null)
{
    revisionsConfig = new RevisionsConfiguration()
    {
        Default = defaultRevConfig,
        Collections = new Dictionary<string, RevisionsCollectionConfiguration>()
        {
            { "Employees", employeesRevConfig },
            { "Products", productsRevConfig }
        }
    };
}

// ==============================================================================
// If a revisions configuration already exists, then modify it
else
{
    revisionsConfig.Default = defaultRevConfig;
    revisionsConfig.Collections["Employees"] = employeesRevConfig;
    revisionsConfig.Collections["Products"] = productsRevConfig;
}

// ==============================================================================
// Define the configure revisions operation, pass the configuration
var configureRevisionsOp = new ConfigureRevisionsOperation(revisionsConfig);

// Execute the operation by passing it to Maintenance.SendAsync
// The existing configuration will be updated
await documentStore.Maintenance.SendAsync(configureRevisionsOp);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="csharp">
{`public ConfigureRevisionsOperation(RevisionsConfiguration configuration);
`}
</CodeBlock>
</TabItem>

| Parameter | Type | Description |
| - | - | - |
| **configuration** | `RevisionsConfiguration` | The revisions configuration to apply |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="csharp">
{`public class RevisionsConfiguration
\{
    public RevisionsCollectionConfiguration Default;
    public Dictionary<string, RevisionsCollectionConfiguration> Collections;
\}
`}
</CodeBlock>
</TabItem>

| Property | Type | Description |
| - | - | - |
| **Default** | `RevisionsCollectionConfiguration` | Optional default settings that apply to any collection Not specified in `Collections`. |
| **Collections** | `Dictionary<string, RevisionsCollectionConfiguration>` | A Dictionary of collection-specific configurations<br/>The `keys` are the collection names<br/>The `values` are the corresponding configurations.<br/>Overrides the default settings for the collections defined. |

<TabItem value="syntax_3" label="syntax_3">
<CodeBlock language="csharp">
{`public class RevisionsCollectionConfiguration
\{
    public long? MinimumRevisionsToKeep \{ get; set; \}
    public TimeSpan? MinimumRevisionAgeToKeep \{ get; set; \}
    public long? MaximumRevisionsToDeleteUponDocumentUpdate \{ get; set; \}
    public bool PurgeOnDelete \{ get; set; \}
    public bool Disabled \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

<a id="revisions-collection-configuration-object"/>

| Property | Type | Description |
| - | - | - |
| **MinimumRevisionsToKeep** | `long` | &lt;ul&gt;&lt;li&gt;This number of revisions will be kept per document.&lt;/li&gt;&lt;li&gt;Older revisions exceeding this number will be purged upon the next document modification.&lt;li&gt; **Default** : `null` = no limit &lt;/li&gt;&lt;/ul&gt; |
| **MinimumRevisionAgeToKeep** | `TimeSpan` | &lt;ul&gt;&lt;li&gt;Limit the number of revisions kept per document by their age.&lt;/li&gt;&lt;li&gt;Revisions that are older than this time will be purged upon the next document modification.&lt;/li&gt;&lt;li&gt; **Default** : `null` = no age limit&lt;/li&gt;&lt;ul&gt; |
| **MaximumRevisionsToDeleteUponDocumentUpdate** | `long` | &lt;ul&gt;&lt;li&gt;The maximum number of revisions to delete upon each document modification.&lt;/li&gt;&lt;li&gt; **Default** : `null` = no limit,<br/> all revisions that pend purging will be deleted.&lt;/li&gt;&lt;/ul&gt; |
| **PurgeOnDelete** | `bool` | &lt;ul&gt;&lt;li&gt;`false` ( **Default** ) - Revisions of a deleted document are moved to the [Revisions Bin](../../../../studio/database/document-extensions/revisions.mdx#revisions-bin).&lt;/li&gt;&lt;li&gt;`true` - When a document is deleted all its revisions are also deleted.&lt;/li&gt;&lt;/ul&gt; |
| **Disabled** | `bool` | &lt;ul&gt;&lt;li&gt;`false` ( **Default** ) - Revisions will be created and purged according to the configuration.&lt;/li&gt;&lt;li&gt;`true` - No revisions will be created or purged.&lt;/li&gt;&lt;/ul&gt; |




</LanguageContent>
<LanguageContent language="java">

<Admonition type="note" title="Note">

* [Revisions](../../../../document-extensions/revisions/overview.mdx) are snapshots of documents that 
  are taken automatically each time a document is updated or deleted.  

* Revisions can be stored indefinitely, or they can be deleted when certain conditions are met. These conditions can be set 
  using the Configure Revisions Operation.  

* In this page:  
  * [Syntax](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#syntax)  
      * [RevisionsCollectionConfiguration](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#revisionscollectionconfiguration)  
      * [RevisionsConfiguration](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#revisionsconfiguration)  
      * [ConfigureRevisionsOperation](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#configurerevisionsoperation)  
  * [Example](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#example)  

</Admonition>
## Syntax

The ConfigureRevisionsOperation modifies the revisions settings for a particular [database](../../../../studio/database/settings/manage-database-group.mdx). 
Within that database, each [collection](../../../../client-api/faq/what-is-a-collection.mdx) can have its own separate revisions 
settings.  

To configure the revisions settings for a database and/or the collections in that database, follow these steps:  

[1.](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#revisionscollectionconfiguration) 
Create a RevisionsCollectionConfiguration` object for each desired collection.  

[2.](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#revisionsconfiguration) 
Put those `RevisionsCollectionConfiguration` objects in a `RevisionsConfiguration` object.  

[3.](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#configurerevisionsoperation) 
Send that RevisionsConfiguration` to the server.  
### RevisionsCollectionConfiguration

This object contains the four revisions settings for a particular collection:  

<TabItem value="java" label="java">
<CodeBlock language="java">
{`public class RevisionsCollectionConfiguration
\{
    private boolean disabled;
    private Duration minimumRevisionAgeToKeep;
    private Long minimumRevisionsToKeep;
    private boolean purgeOnDelete;
\}
`}
</CodeBlock>
</TabItem>

| Configuration Option | Description | Default |
| - | - | - |
| **minimumRevisionsToKeep** | The minimum number of revisions to keep per document | `null` - unlimited |
| **minimumRevisionAgeToKeep** | The minimum amount of time to keep each revision. [Format of `Duration`](https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html). | `null` - unlimited |
| **disabled** | Indicates whether to completely disable revisions for documents in this collection | `false` |
| **purgeOnDelete** | When a document is deleted, this indicates whether all of its revisions should be deleted as well | `false` |

A revision is only deleted if both the `minimumRevisionsToKeep` for that document is exceeded, **and** the revision is 
older than the `minimumRevisionAgeToKeep` limit. The oldest revisions are deleted first.  

* By default both these options are set to `null`, meaning that an unlimited number of revisions will be saved 
indefinitely.  

* If only `minimumRevisionsToKeep` is null, revisions will be deleted only when they are older than 
`minimumRevisionAgeToKeep`.  

* If only `minimumRevisionAgeToKeep` is null, revisions will be deleted each time there are more revisions than 
`minimumRevisionsToKeep`.  

These deletions will only take place _when a new revision is added_ to a document. Until a new revision is added, that 
document's revisions can exceed these limits.  
### RevisionsConfiguration

This object contains a `Map` of revision configurations for each collection in the database, plus an optional default 
configuration.  

<TabItem value="java" label="java">
<CodeBlock language="java">
{`public class RevisionsConfiguration
\{
     private Map<String, RevisionsCollectionConfiguration> collections;
     private RevisionsCollectionConfiguration defaultConfig;
\}
`}
</CodeBlock>
</TabItem>

| Property | Description | Default |
| - | - | - |
| **collections** | A map in which the keys are collection names, and the values are the corresponding configurations | `null` |
| **defaultConfig** | An optional default configuration that applies to any collection not listed in `collections` | `null` |

Note that when this object is sent to the server, it overrides the configurations for **all** collections, including all existing 
configurations currently on the server. If a collection is not listed in `collections` and `defaultConfig` has not been set, the 
default values listed in the table [above](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#revisionscollectionconfiguration) 
are applied.  
### ConfigureRevisionsOperation

Lastly, the operation itself sends the `RevisionsConfiguration` to the server, overriding **all** existing collection configurations. 
You'll want to store these configurations on the client-side so they don't have to be created from scratch each time you want to 
modify them.  

<TabItem value="java" label="java">
<CodeBlock language="java">
{`public ConfigureRevisionsOperation(RevisionsConfiguration configuration);
`}
</CodeBlock>
</TabItem>

| Parameter | Description |
| - | - |
| **configuration** | The new revision settings for a particular database |



## Example

The following code sample updates the settings of the Document Store's [default database](../../../../client-api/setting-up-default-database.mdx) 
- which in this case is a database named "Northwind". To update the configuration of different database, use the 
[`forDatabase()` method](../../../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx).

<TabItem value="operation" label="operation">
<CodeBlock language="java">
{`// Create a configuration for the Employees collection
RevisionsCollectionConfiguration employeesRevConfig = new RevisionsCollectionConfiguration();
employeesRevConfig.setMinimumRevisionAgeToKeep(Duration.ofDays(1));
employeesRevConfig.setMinimumRevisionsToKeep(42l);
employeesRevConfig.setPurgeOnDelete(true);

// Add the Employees configuration to a map
Map<String, RevisionsCollectionConfiguration> collections = new HashMap<>();
collectionConfig.put("Employees", employeesRevConfig);

// Create a default collection configuration
RevisionsCollectionConfiguration defaultRevConfig = new RevisionsCollectionConfiguration();
defaultRevConfig.setMinimumRevisionAgeToKeep(Duration.ofDays(7));
defaultRevConfig.setMinimumRevisionsToKeep(100l);
defaultRevConfig.setPurgeOnDelete(false);

// Combine to create a configuration for the database
RevisionsConfiguration northwindRevConfig = new RevisionsConfiguration();
northwindRevConfig.setCollections(collections);
northwindRevConfig.setDefaultConfig(defaultRevConfig);

// Execute the operation to update the database
documentStore.maintenance().send(new ConfigureRevisionsOperation(northwindRevConfig));
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* Use `ConfigureRevisionsOperation` to apply the following [revisions configuration](../../../../studio/database/settings/document-revisions.mdx#revisions-configuration) to the database:  
  * **Default configuration** - applies to all document collections.  
  * **Collection-specific configurations** - override the default settings for these collections.  
  * To apply a configuration for conflict document revisions see [configure conflict revisions](../../../../document-extensions/revisions/client-api/operations/conflict-revisions-configuration.mdx).  

* The configuration passed to this operation will **REPLACE** the current revisions configuration in the database.  
  To **MODIFY** existing configuration, fetch the current configuration from the database record first.  

* After applying the configuration,  
  revisions are created and purged for a document whenever the document is created, modified, or deleted.  

* To create a revision when there is no configuration defined (or enabled) see: [force revision creation](../../../../document-extensions/revisions/overview.mdx#force-revision-creation)

* By default, the operation will be applied to the [default database](../../../../client-api/setting-up-default-database.mdx).  
  To operate on a different database see [switch operations to different database](../../../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx).  

* In this page:  
  * [Replace configuration](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#replace-configuration)  
  * [Modify configuration](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#modify-configuration)  
  * [Syntax](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#syntax)  

</Admonition>
## Replace configuration

* In this example, we create a new `RevisionsConfiguration` for the database.  
  If revisions configuration already exists in the database - it will be **replaced**.

<TabItem value="replace_configuration" label="replace_configuration">
<CodeBlock language="js">
{`// ==============================================================================
// Define default settings that will apply to ALL collections
// Note: this is optional
const defaultRevConfig = new RevisionsCollectionConfiguration();
defaultRevConfig.minimumRevisionsToKeep = 100;
defaultRevConfig.minimumRevisionAgeToKeep = TimeUtil.millisToTimeSpan(3600 * 1000 * 24 * 7) // 7 days
defaultRevConfig.maximumRevisionsToDeleteUponDocumentUpdate = 15;
defaultRevConfig.purgeOnDelete = false;
defaultRevConfig.disabled = false;

// With this configuration:
// ------------------------
// * A revision will be created anytime a document is modified or deleted.
// * Revisions of a deleted document can be accessed in the Revisions Bin view.
// * Only the latest 100 revisions will be kept. Older ones will be discarded.
// * Older revisions will be removed if they exceed 7 days on next revision creation.
// * A maximum of 15 revisions will be deleted each time a document is updated,
//   until the defined '# of revisions to keep' limit is reached.

// ==============================================================================
// Define a specific configuration for the EMPLOYEES collection
// This will override the default settings
const employeesRevConfig  = new RevisionsCollectionConfiguration();
employeesRevConfig.minimumRevisionsToKeep = 50;
employeesRevConfig.minimumRevisionAgeToKeep = TimeUtil.millisToTimeSpan(3600 * 1000 * 12);  // 12 hrs
employeesRevConfig.purgeOnDelete = true;
employeesRevConfig.disabled = false;

// With this configuration:
// ------------------------
// * A revision will be created anytime an Employee document is modified.
// * When a document is deleted all its revisions will be removed.
// * At least 50 of the latest revisions will be kept.
// * Older revisions will be removed if they exceed 12 hours on next revision creation.

// ==============================================================================
// Define a specific configuration for the PRODUCTS collection
// This will override the default settings
const productsRevConfig   = new RevisionsCollectionConfiguration();
productsRevConfig.disabled = true;

// With this configuration:
// ------------------------
// No revisions will be created for the Products collection,
// even though default configuration is enabled

// ==============================================================================
// Combine all configurations in the RevisionsConfiguration object
const revisionsConfig = new RevisionsConfiguration();
revisionsConfig.defaultConfig = defaultRevConfig;
revisionsConfig.collections = new Map<string, RevisionsCollectionConfiguration>();
revisionsConfig.collections.set("Employees", employeesRevConfig);
revisionsConfig.collections.set("Products", productsRevConfig);

// ==============================================================================
// Define the configure revisions operation, pass the configuration
const configureRevisionsOp = new ConfigureRevisionsOperation(revisionsConfig);

// Execute the operation by passing it to maintenance.send
// Any existing configuration will be replaced with the new configuration passed
await store.maintenance.send(configureRevisionsOp);
`}
</CodeBlock>
</TabItem>



## Modify configuration

* In this example, we fetch the existing revisions configuration from the database record and **modify** it.   

<TabItem value="modify_configuration" label="modify_configuration">
<CodeBlock language="js">
{`// ==============================================================================
// Define the get database record operation:
const getDatabaseRecordOp = new GetDatabaseRecordOperation(documentStore.database);
// Get the current revisions configuration from the database record:
const record = await store.maintenance.server.send(getDatabaseRecordOp);
const revisionsConfig = record.revisions;

// ==============================================================================
// If no revisions configuration exists, then create a new configuration
if (!revisionsConfig) \{
    const revisionsConfig = new RevisionsConfiguration();
    revisionsConfig.defaultConfig = defaultRevConfig;
    revisionsConfig.collections = new Map<string, RevisionsCollectionConfiguration>();
    revisionsConfig.collections.set("Employees", employeesRevConfig);
    revisionsConfig.collections.set("Products", productsRevConfig);
\}

// ==============================================================================
// If a revisions configuration already exists, then modify it
else \{
    revisionsConfig.defaultConfig = defaultRevConfig;
    revisionsConfig.collections.set("Employees", employeesRevConfig);
    revisionsConfig.collections.set("Products", productsRevConfig);
\}

// ==============================================================================
// Define the configure revisions operation, pass the configuration
const configureRevisionsOp = new ConfigureRevisionsOperation(revisionsConfig);

// Execute the operation by passing it to maintenance.send
// The existing configuration will be updated
await documentStore.maintenance.send(configureRevisionsOp);
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="js">
{`const configureRevisionsOp = new ConfigureRevisionsOperation(configuration);
`}
</CodeBlock>
</TabItem>

| Parameter | Type | Description |
| - | - | - |
| **configuration** | `RevisionsConfiguration` | The revisions configuration to apply |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="js">
{`class RevisionsConfiguration
\{
    defaultConfig;
    collections;
\}
`}
</CodeBlock>
</TabItem>

| Property | Type | Description |
| - | - | - |
| **defaultConfig** | `RevisionsCollectionConfiguration` | Optional default settings that apply to any collection Not specified in `collections`. |
| **collections** | `Dictionary<string, RevisionsCollectionConfiguration>` | A Dictionary of collection-specific configurations<br/>The `keys` are the collection names<br/>The `values` are the corresponding configurations.<br/>Overrides the default settings for the collections defined. |

<TabItem value="syntax_3" label="syntax_3">
<CodeBlock language="js">
{`class RevisionsCollectionConfiguration
\{
    minimumRevisionsToKeep;
    minimumRevisionAgeToKeep;
    maximumRevisionsToDeleteUponDocumentUpdate;
    purgeOnDelete;
    disabled;
\}
`}
</CodeBlock>
</TabItem>

<a id="revisions-collection-configuration-object"/>

| Property | Type | Description |
| - | - | - |
| **minimumRevisionsToKeep** | `number` | &lt;ul&gt;&lt;li&gt;This number of revisions will be kept per document.&lt;/li&gt;&lt;li&gt;Older revisions exceeding this number will be purged upon the next document modification.&lt;li&gt; **Default** : `null` = no limit &lt;/li&gt;&lt;/ul&gt; |
| **minimumRevisionAgeToKeep** | `string` | &lt;ul&gt;&lt;li&gt;Limit the number of revisions kept per document by their age.&lt;/li&gt;&lt;li&gt;Revisions that are older than this time will be purged upon the next document modification.&lt;/li&gt;&lt;li&gt; **Default** : `null` = no age limit&lt;/li&gt;&lt;ul&gt; |
| **maximumRevisionsToDeleteUponDocumentUpdate** | `number` | &lt;ul&gt;&lt;li&gt;The maximum number of revisions to delete upon each document modification.&lt;/li&gt;&lt;li&gt; **Default** : `null` = no limit,<br/> all revisions that pend purging will be deleted.&lt;/li&gt;&lt;/ul&gt; |
| **purgeOnDelete** | `boolean` | &lt;ul&gt;&lt;li&gt;`false` ( **Default** ) - Revisions of a deleted document are moved to the [Revisions Bin](../../../../studio/database/document-extensions/revisions.mdx#revisions-bin).&lt;/li&gt;&lt;li&gt;`true` - When a document is deleted all its revisions are also deleted.&lt;/li&gt;&lt;/ul&gt; |
| **disabled** | `boolean` | &lt;ul&gt;&lt;li&gt;`false` ( **Default** ) - Revisions will be created and purged according to the configuration.&lt;/li&gt;&lt;li&gt;`true` - No revisions will be created or purged.&lt;/li&gt;&lt;/ul&gt; |




</LanguageContent>

<!---
### Document Extensions
- [Document Revisions Overview](../../../../document-extensions/revisions/overview)
- [Revert Revisions](../../../../document-extensions/revisions/revert-revisions)
- [Revisions and Other Features](../../../../document-extensions/revisions/revisions-and-other-features)

### Client API
- [Revisions: API Overview](../../../../document-extensions/revisions/client-api/overview)
- [Session: Loading Revisions](../../../../document-extensions/revisions/client-api/session/loading)
- [Session: Including Revisions](../../../../document-extensions/revisions/client-api/session/including)
- [Session: Counting Revisions](../../../../document-extensions/revisions/client-api/session/counting)
- [What Is a Collection](../../../../client-api/faq/what-is-a-collection)
- [What Are Operations](../../../../client-api/operations/what-are-operations)
- [Switch Operation Database](../../../../client-api/operations/how-to/switch-operations-to-a-different-database)
- [Setting Up a Default Database](../../../../client-api/setting-up-default-database)

### Studio
- [Settings: Document Revisions](../../../../studio/database/settings/document-revisions)
- [Document Extensions: Revisions](../../../../studio/database/document-extensions/revisions)
- [Manage Database Group](../../../../studio/database/settings/manage-database-group)


-->